--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "miniplot"
 version = "0.0.1"
 edition = "2024"
+description = "A simple plotting library for Rust, built on top of egui and eframe."
+license = "MIT"
+repository = "https://github.com/TomtheCoder2/miniplot"
 
 [dependencies]
 eframe = "0.33.3"
